Update nginx config that being used

--- a/cookbooks/configs/templates/default/spzkf.nginx.conf
+++ b/cookbooks/configs/templates/default/spzkf.nginx.conf
@@ -108,7 +108,8 @@ http {
         # Adding Access-Control-Allow-Origin to all request
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken' always;
+        ##### Content-Type,
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,X-Requested-With,User-Agent,DNT,Cache-Control,X-Mx-ReqToken' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
 
         #charset koi8-r;
