Update nginx config to fix nginx access control allow origin header

--- a/cookbooks/configs/templates/default/spzkf.nginx.conf
+++ b/cookbooks/configs/templates/default/spzkf.nginx.conf
@@ -104,6 +104,9 @@ http {
         rewrite_log  on;
         fastcgi_keep_conn on;
         #server_name  localhost;
+        #charset koi8-r;
+        root   /var/www/html;
+        index  index.php index.html index.htm;
 
         # Adding Access-Control-Allow-Origin to all request
         add_header 'Access-Control-Allow-Origin' '*';
@@ -111,10 +114,12 @@ http {
         add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-CustomHeader,X-Requested-With,X-Mx-ReqToken' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
 
-        #charset koi8-r;
-
-        root   /var/www/html;
-        index  index.php index.html index.htm;
+        if ($request_method = 'OPTIONS') {
+           add_header 'Access-Control-Max-Age' 1728000;
+           add_header 'Content-Type' 'text/plain charset=UTF-8';
+           add_header 'Content-Length' 0;
+           return 204;
+        }
 
         # Unset cache for default
         ##  Cache everything by default
@@ -172,6 +177,7 @@ http {
         location / {
             etag       off;
             # This is cool because no php is touched for static content
+
             try_files $uri @rewrite;
             #try_files $uri $uri/ /index.php?$args;
         }
@@ -216,7 +222,11 @@ http {
             include        fastcgi_params;
             fastcgi_intercept_errors on;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_read_timeout 40;
+            fastcgi_buffers 256 16k;
+            fastcgi_buffer_size 128k;
+            fastcgi_connect_timeout 300;
+            fastcgi_send_timeout 300;
+            fastcgi_read_timeout 300;
             fastcgi_cache MYAPP;
             fastcgi_cache_bypass $no_cache;
             fastcgi_no_cache $no_cache;
@@ -230,6 +240,11 @@ http {
             fastcgi_ignore_headers Cache-Control Expires;
             fastcgi_pass_header Set-Cookie;
             fastcgi_pass_header Cookie;
+
+            ## Hide the X-Drupal-Cache header provided by Pressflow.
+            fastcgi_hide_header 'X-Drupal-Cache';
+            ## Hide the Drupal 7 header X-Generator.
+            fastcgi_hide_header 'X-Generator';
 
             ## Add a cache miss/hit status header.
             add_header Access-Control-Allow-Origin *;
