Updating nginx.conf

--- a/cookbooks/configs/templates/default/spgp.nginx.conf
+++ b/cookbooks/configs/templates/default/spgp.nginx.conf
@@ -240,9 +240,14 @@ http {
             fastcgi_hide_header 'X-Generator';
 
             ## Add a cache miss/hit status header.
-            add_header Access-Control-Allow-Origin *;
             add_header X-Micro-Cache $upstream_cache_status;
 
+            # Adding Access-Control-Allow-Origin to all request
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-CustomHeader,X-Requested-With,X-Mx-ReqToken' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            
             ## To avoid any interaction with the cache control headers we expire
             ## everything on this location immediately.
             #expires epoch;
