Updating bootproxy for proxy_set_header Referer $http_referer; and loadbalancer adding cookie support

--- a/cookbooks/configs/templates/default/loadbalancer.conf
+++ b/cookbooks/configs/templates/default/loadbalancer.conf
@@ -1,5 +1,5 @@
 
-upstream myapp1 {
+upstream main {
     server druapp01.zkf.vpn:8888;
 }
 
@@ -8,12 +8,12 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
+        proxy_set_header Referer $http_referer;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header                HTTP_Country-Code $geoip_country_code;
-        # proxy_set_header        Cookie $http_cookie;
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_pass_request_headers      on;
-        proxy_pass http://myapp1;
+        proxy_set_header   Cookie $http_cookie;
+        proxy_pass http://main;
     }
 }
