--- a/cookbooks/configs/templates/default/loadbalancer-test.conf
+++ b/cookbooks/configs/templates/default/loadbalancer-test.conf
@@ -8,10 +8,12 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
+        proxy_set_header Referer $http_referer;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_pass_request_headers      on;
+        proxy_set_header   Cookie $http_cookie;
         proxy_pass http://main;
     }
 }
