--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -42,6 +42,7 @@ server {
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 #proxy_set_header Host $host;
                 proxy_set_header Host $http_host;
+                proxy_set_header Referer $http_referer;
                 proxy_set_header   Cookie $http_cookie;
                 chunked_transfer_encoding      Off;
                 # proxy_cache_use_stale  error timeout invalid_header updating http_500 http_502 http_503 http_504;
@@ -66,4 +67,3 @@ server {
                 proxy_pass            http://<%= @host %>_upstream;
         }
 }
-
