--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -40,9 +40,8 @@ server {
                 # proxy_cache_valid      200  1d;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                #proxy_set_header Host $host;
-                proxy_set_header Host $http_host;
-                proxy_set_header Referer $http_referer;
+                proxy_set_header   Host $http_host;
+                proxy_set_header   Referer $http_referer;
                 proxy_set_header   Cookie $http_cookie;
                 chunked_transfer_encoding      Off;
                 # proxy_cache_use_stale  error timeout invalid_header updating http_500 http_502 http_503 http_504;
@@ -59,6 +58,9 @@ server {
                 # expires max;
                 expires 30d;
                 # expires -1;
+                proxy_set_header   Cookie $http_cookie;
+                proxy_set_header   Referer $http_referer;
+                proxy_set_header   Host $http_host;
                 proxy_connect_timeout       300;
                 proxy_send_timeout          300;
                 proxy_read_timeout          300;
