--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -43,6 +43,7 @@ server {
                 proxy_set_header   Host $http_host;
                 proxy_set_header   Referer $http_referer;
                 proxy_set_header   Cookie $http_cookie;
+                proxy_http_version 1.1;
                 chunked_transfer_encoding      Off;
                 # proxy_cache_use_stale  error timeout invalid_header updating http_500 http_502 http_503 http_504;
                 proxy_connect_timeout       300;
@@ -61,6 +62,7 @@ server {
                 proxy_set_header   Cookie $http_cookie;
                 proxy_set_header   Referer $http_referer;
                 proxy_set_header   Host $http_host;
+                proxy_http_version 1.1; 
                 proxy_connect_timeout       300;
                 proxy_send_timeout          300;
                 proxy_read_timeout          300;
