--- a/cookbooks/configs/templates/default/spgp_de.nginx.conf
+++ b/cookbooks/configs/templates/default/spgp_de.nginx.conf
@@ -12,8 +12,8 @@ events {
 
 http {
     # Setting log for Docker
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log info;
+    access_log /var/log/nginx.access.log;
+    error_log /var/log/nginx.error.log info;
 
     include       mime.types;
     default_type  application/octet-stream;
