--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -35,6 +35,7 @@ server {
         location / {
                 proxy_redirect off;
                 proxy_buffering off;
+                proxy_ignore_client_abort on
                 proxy_pass            http://<%= @host %>_upstream;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
@@ -55,6 +56,7 @@ server {
         location ~* \.(|jpg|jpeg|gif|png|ico|zip|gz|xls|bmp|rtf|js)$ {
                 # proxy_set_header Host $host;
                 #proxy_cache cacheimage;
+                proxy_ignore_client_abort on
                 proxy_cache_valid 30d;
                 # expires max;
                 expires 30d;
@@ -62,7 +64,7 @@ server {
                 proxy_set_header   Cookie $http_cookie;
                 proxy_set_header   Referer $http_referer;
                 proxy_set_header   Host $http_host;
-                proxy_http_version 1.1; 
+                proxy_http_version 1.1;
                 proxy_connect_timeout       300;
                 proxy_send_timeout          300;
                 proxy_read_timeout          300;
