--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -35,6 +35,7 @@ server {
         location / {
                 proxy_redirect off;
                 proxy_buffering off;
+                proxy_ignore_client_abort on;
                 proxy_pass            http://<%= @host %>_upstream;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
@@ -55,6 +56,7 @@ server {
         location ~* \.(|jpg|jpeg|gif|png|ico|zip|gz|xls|bmp|rtf|js)$ {
                 # proxy_set_header Host $host;
                 #proxy_cache cacheimage;
+                proxy_ignore_client_abort on;
                 proxy_cache_valid 30d;
                 # expires max;
                 expires 30d;
