fixing syntax error

--- a/cookbooks/configs/templates/default/yd-staging-web.conf
+++ b/cookbooks/configs/templates/default/yd-staging-web.conf
@@ -100,7 +100,7 @@ http {
 
    	server {
         listen       8001;
-        server_name  staging-yedian.chinacloudapp.cn;
+        server_name  cms.staging-web.chinacloudapp.cn;
         location / {
             root   /var/www/html/APAC_Yedian_CMS_frontend/dist;
             index  index.html index.htm;
@@ -109,7 +109,7 @@ http {
     }
     server {
         listen       8002;
-        server_name  staging-yedian.chinacloudapp.cn;
+        server_name operator.staging-web.chinacloudapp.cn;
         location / {
             root   /var/www/html/APAC_Yedian_Operator_frontend/dist;
             index  index.html index.htm;
