--- a/cookbooks/configs/templates/default/yd-staging-web.conf
+++ b/cookbooks/configs/templates/default/yd-staging-web.conf
@@ -1,4 +1,4 @@
-user www www;  #modify
+user nginx;  #modify
 worker_processes auto;  #modify
 pid /var/run/nginx.pid;  #modify
 worker_rlimit_nofile 65536;
@@ -30,64 +30,12 @@ http {
     keepalive_timeout  120;
 
     #gzip  on;
-
-    # Adding Drupal Specific configurations
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-    # Define Nginx MicroCache
-    fastcgi_cache_path /dev/shm/microcache levels=1:2 keys_zone=MYAPP:5M max_size=256M inactive=2h loader_threshold=2592000000 loader_sleep=1 loader_files=100000;
-    fastcgi_cache_key "$scheme$request_method$host$request_uri";
-
-    # Allowing local environment to check nginx status
-    geo $dont_show_nginx_status {
-        default 1;
-        127.0.0.1 0; # allow on the loopback
-        172.16.0.0/20 0; # allow on an internal network
-    }
-
-    # Add Cache status into response header
-    add_header X-Cache $upstream_cache_status;
-    limit_conn_zone $binary_remote_addr zone=gulag:5m;
-    map $http_cookie $cache_uid {
-        default nil; # hommage to Lisp :)
-        ~SESS[[:alnum:]]+=(?<session_id>[[:alnum:]]+) $session_id;
-    }
-
-    map $request_method $no_cache {
-        default 1;
-        HEAD 0;
-        GET 0;
-    }
-
-    map $http_user_agent $is_bot {
-        default  '';
-        ~*crawl|goog|yahoo|yandex|spider|bot|tracker|click|parser is_bot;
-    }
-
-    ## Add here all user agents that are to be blocked.
-    map $http_user_agent $bad_bot {
-        default 0;
-        ~*^Lynx 0; # Let Lynx go through
-        libwww-perl                      1;
-        ~(?i)(httrack|htmlparser|libwww) 1;
-    }
-    ## Add here all referrers that are to blocked.
-    map $http_referer $bad_referer {
-        default 0;
-        ~(?i)(adult|babes|click|diamond|forsale|girl|jewelry|love|nudit|organic|poker|porn|poweroversoftware|sex|teen|webcam|zippo|casino|replica) 1;
-    }
-
-    ## Let Ajax calls go through.
-    map $uri $no_cache_ajax {
-        default 0;
-        /system/ajax 1;
     }
     server {
         listen      90;
         server_name  staging-yedian.chinacloudapp.cn;
         location / {
-            root   /var/www/html/APAC_Yedian_Merchant_WebApp_Frontend/static;
+            root   /var/www/APAC_Yedian_Merchant_WebApp_Frontend/static;
             try_files $uri /index.html;
         }
         location /cms {
@@ -102,7 +50,7 @@ http {
         listen       8001;
         server_name  cms.staging-web.chinacloudapp.cn;
         location / {
-            root   /var/www/html/APAC_Yedian_CMS_frontend/dist;
+            root   /var/www/APAC_Yedian_CMS_frontend/dist;
             index  index.html index.htm;
             try_files $uri /index.html;
         }
@@ -111,18 +59,10 @@ http {
         listen       8002;
         server_name operator.staging-web.chinacloudapp.cn;
         location / {
-            root   /var/www/html/APAC_Yedian_Operator_frontend/dist;
+            root   /var/www/APAC_Yedian_Operator_frontend/dist;
             index  index.html index.htm;
             try_files $uri /index.html;
         }
     }
 
-
-
-    #add
-    ##########################vhost#####################################
-    include vhost/*.conf;
-
 }
-
-daemon off;
