Updating yedian role file

--- a/cookbooks/configs/templates/default/yd-staging-backend.conf
+++ b/cookbooks/configs/templates/default/yd-staging-backend.conf
@@ -44,7 +44,39 @@ http {
         location /cms {
             proxy_pass   http://127.0.0.1:3008;
         }
+                location /payment {
+            proxy_pass  http://127.0.0.1:3018;
+        }
+
+	    location /auditing {
+            proxy_pass  http://127.0.0.1:3019;
+        }
+
+        location /public {
+            proxy_pass   http://127.0.0.1:3007;
+        }
+
+        location /operatorCore {
+            proxy_pass   http://127.0.0.1:4000;
+        }
+        location /ktvCore/ktvs {
+            proxy_pass   http://localhost:3000;
+        }
+
+        location /explorer {
+            proxy_pass   http://127.0.0.1:3001;
+        }
+
+        location /api {
+            proxy_pass   http://127.0.0.1:3001;
+        }
+
+        location /compliance {
+            proxy_pass   http://localhost:3003;
+        }
+
+        location /venuesCore {
+            proxy_pass   http://127.0.0.1:3007;
+        }
    	}
-
-
 }
