--- a/cookbooks/configs/templates/default/yd-staging-web.conf
+++ b/cookbooks/configs/templates/default/yd-staging-web.conf
@@ -35,7 +35,7 @@ http {
         listen      90;
         server_name  staging-yedian.chinacloudapp.cn;
         location / {
-            root   /var/www/APAC_Yedian_Merchant_WebApp_Frontend/static;
+            root   /var/www/Merchant_web/static;
             try_files $uri /index.html;
         }
         location /cms {
@@ -50,7 +50,7 @@ http {
         listen       8001;
         server_name  cms.staging-web.chinacloudapp.cn;
         location / {
-            root   /var/www/APAC_Yedian_CMS_frontend/dist;
+            root   /var/www/cms_web/dist;
             index  index.html index.htm;
             try_files $uri /index.html;
         }
@@ -59,7 +59,7 @@ http {
         listen       8002;
         server_name operator.staging-web.chinacloudapp.cn;
         location / {
-            root   /var/www/APAC_Yedian_Operator_frontend/dist;
+            root   /var/www/operator_web/dist;
             index  index.html index.htm;
             try_files $uri /index.html;
         }
