--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -17,14 +17,16 @@ upstream <%= @host %>_upstream {
 <% end %>
 server {
         listen 80;
-        <% if ! @proxyport.eql?("80")%><%= "listen "%><%= @proxyport%><%= ";"%><% end %>
-        ## For SSL.
-        # listen 443 ssl;
-        # ssl    on;
-        # ssl_certificate    /home/spdadmin/ssl/startssl.crt;
-        # ssl_certificate_key    /home/spdadmin/ssl/zkfecp.key;
-        # ssl_session_timeout 5m;
-        ## END SSL ##
+        <% # Temporary hardcode for 5984 couchdb ssl %>
+        <% if @proxyport.eql?("443") || @proxyport.eql?("5984")%>
+        <%= "## For SSL." %>
+        <%= "listen 443 ssl;" %>
+        <%= "ssl    on;" %>
+        <%= "ssl_certificate    /root/site.crt;" %>
+        <%= "ssl_certificate_key    /root/site.key" %>
+        <%= "ssl_session_timeout 5m;" %>
+        <%= "## END SSL ##" %>
+        <% elsif ! @proxyport.eql?("80")%><%= "listen "%><%= @proxyport%><%= ";"%><% end %>
 
         server_name <%= @domain %>;
         location /request_uri {
