--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -18,7 +18,10 @@ upstream <%= @host %>_upstream {
 server {
         listen 80;
         <% # Temporary hardcode for 5984 couchdb ssl %>
-        <% if @proxyport.eql?("443") || @proxyport.eql?("5984")%>
+        <% if @proxyport.eql?("443") || @proxyport.eql?("5984") %>
+        <%= "return 301 https://$host$request_uri;" %>
+<%= "}" %>
+<%= "server {" %>        
         <%= "## For SSL." %>
         <%= "listen 443 ssl;" %>
         <%= "ssl    on;" %>
