Updating crt and key path when mounting keys and crts into docker

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -21,12 +21,12 @@ server {
         <% if @proxyport.eql?("443") || @proxyport.eql?("5984") %>
         <%= "return 301 https://$host$request_uri;" %>
 <%= "}" %>
-<%= "server {" %>        
+<%= "server {" %>
         <%= "## For SSL." %>
         <%= "listen 443 ssl;" %>
         <%= "ssl    on;" %>
-        <%= "ssl_certificate    /root/site.crt;" %>
-        <%= "ssl_certificate_key    /root/site.key" %>
+        <%= "ssl_certificate    /site.crt;" %>
+        <%= "ssl_certificate_key    /site.key" %>
         <%= "ssl_session_timeout 5m;" %>
         <%= "## END SSL ##" %>
         <% elsif ! @proxyport.eql?("80")%><%= "listen "%><%= @proxyport%><%= ";"%><% end %>
