--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -25,8 +25,8 @@ server {
         <%= "## For SSL." %>
         <%= "listen 443 ssl;" %>
         <%= "ssl    on;" %>
-        <%= "ssl_certificate    /root/site.crt;" %>
-        <%= "ssl_certificate_key    /root/site.key;" %>
+        <%= "ssl_certificate    /root/<%= @domain %>/site.crt;" %>
+        <%= "ssl_certificate_key    /root/<%= @domain %>/site.key;" %>
         <%= "ssl_session_timeout 5m;" %>
         <%= "## END SSL ##" %>
         <% elsif ! @proxyport.eql?("80")%><%= "listen "%><%= @proxyport%><%= ";"%><% end %>
