--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -4,7 +4,7 @@
 #proxy_cache_path /data/cache/image levels=1:2 keys_zone=cacheimage:20m max_size=1g;
 
 upstream <%= @host %>_upstream {
-        server <%= @host %><% if ! @proxyport.eql?("80")%><%= ":" %><%= @proxyport%><% end %>;
+        server <%= @host %><% if @proxyport.eql?("443") %><%= ":80" %><% elsif ! @proxyport.eql?("80")%><%= ":" %><%= @proxyport%><% end %>;
 }
 <% if @domain.include? "www" %>
 <% DOMAIN = @domain.chomp.split(" ")[1] %>
