Fixing proxy.conf syntax error

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -19,7 +19,7 @@ server {
         listen 80;
         <% # Temporary hardcode for 5984 couchdb ssl %>
         <% if @proxyport.eql?("443") || @proxyport.eql?("5984") %>
-        <%= "server_name <%= @domain %>;" %>
+        <%= "server_name " %><%= @domain %><%=";" %>
         <%= "return 301 https://$host$request_uri;" %>
 <%= "}" %>
 <%= "server {" %>
