--- a/cookbooks/configs/templates/default/dstest.proxy.conf
+++ b/cookbooks/configs/templates/default/dstest.proxy.conf
@@ -9,6 +9,7 @@ server {
     return 200 $host;
   }
   location /crm {
+    rewrite /crm(.*) /$1  break;
     proxy_redirect off;
     proxy_buffering off;
     proxy_pass      http://kungfudingcan_crm;
