Updating Dockerfile to support awscli

--- a/settings/dockerchefclient/Dockerfile
+++ b/settings/dockerchefclient/Dockerfile
@@ -3,19 +3,8 @@ MAINTAINER chankongching@gmail.com
 
 COPY ./chef-12.5.1-1.el7.x86_64.rpm /tmp/chef-12.5.1-1.el7.x86_64.rpm
 RUN  rpm -ivh /tmp/chef-12.5.1-1.el7.x86_64.rpm
-# RUN  yum install -y docker
 
-# RUN  set -x && \
-#      systemctl enable docker 
-
-# CMD ["/usr/sbin/init"]
-
-# RUN  set -x && \
-#     systemctl start docker
-
-#RUN  docker login -ukeithyau -pthomas123 dockerpriv.kybot.io:5002
-#RUN  docker pull dockerpriv.kybot.io:5002/keithyau/kyligence_azure:latest
-
+# Installing nodejs for azure
 RUN  set -x && \
      cd /root && \
      yum install wget make gcc-c++ -y && \
@@ -24,6 +13,16 @@ RUN  set -x && \
      cd node-v* && \
      ./configure && \
      make install && \
-     node --version 
+     node --version
+
+# Installing azure command line
 RUN  set -x && \
      npm install azure-cli -g
+
+# Installing python for aws
+RUN  set -x && \
+     yum -y install https://centos7.iuscommunity.org/ius-release.rpm && \
+     yum -y install python36u python36u-pip
+
+RUN  which python3.6
+RUN  which pip3.6
