Updating spgp_de.nginx.conf to ensure option

--- a/cookbooks/configs/templates/default/spgp_de.nginx.conf
+++ b/cookbooks/configs/templates/default/spgp_de.nginx.conf
@@ -114,6 +114,17 @@ http {
         add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-CustomHeader,X-Requested-With,X-Mx-ReqToken' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
 
+        # Returning no content with response code 204 when request method is OPTION(request preflight)
+        if ($request_method = 'OPTIONS') {
+          more_set_headers 'Access-Control-Allow-Origin: *';
+          more_set_headers 'Access-Control-Allow-Methods: GET, POST, OPTIONS, PUT, DELETE';
+          more_set_headers 'Access-Control-Allow-Credentials: true';
+          more_set_headers 'Access-Control-Allow-Headers: Origin,Content-Type,Accept';
+          add_header Content-Length 0;
+          add_header Content-Type text/plain;
+          return 204;
+        }
+
         # Unset cache for default
         ##  Cache everything by default
         ## set $no_cache 0;
