making ssl and base url in drupal to work

--- a/cookbooks/configs/templates/default/spgp_de.nginx.conf
+++ b/cookbooks/configs/templates/default/spgp_de.nginx.conf
@@ -170,10 +170,10 @@ http {
 
         location / {
           if ($request_method = OPTIONS ) {
-              add_header Access-Control-Allow-Origin "$http_origin";
-              add_header Access-Control-Allow-Methods "GET, OPTIONS";
-              add_header Access-Control-Allow-Headers "Authorization";
-              add_header Access-Control-Allow-Credentials "true";
+              add_header 'Access-Control-Allow-Origin' "$http_origin";
+              add_header 'Access-Control-Allow-Methods' "GET, OPTIONS";
+              add_header 'Access-Control-Allow-Headers' "Authorization";
+              add_header 'Access-Control-Allow-Credentials' "true";
               add_header Content-Length 0;
               add_header Content-Type text/plain;
               return 200;
@@ -254,7 +254,7 @@ http {
             add_header X-Micro-Cache $upstream_cache_status;
 
             # Adding Access-Control-Allow-Origin to all request
-            # add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' '*';
             # add_header 'Access-Control-Allow-Origin' "$http_origin";
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-CustomHeader,X-Requested-With,X-Mx-ReqToken' always;
