--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -40,6 +40,7 @@ server {
                 proxy_pass            http://<%= @host %>_upstream;
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
+                proxy_ssl_session_reuse off;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header   Host $http_host;
