--- a/cookbooks/configs/templates/default/spgp_de.nginx.conf
+++ b/cookbooks/configs/templates/default/spgp_de.nginx.conf
@@ -170,7 +170,7 @@ http {
 
         location / {
           if ($request_method = OPTIONS ) {
-              add_header 'Access-Control-Allow-Origin' "$http_origin";
+              add_header 'Access-Control-Allow-Origin' '*';
               add_header 'Access-Control-Allow-Methods' "GET, OPTIONS";
               add_header 'Access-Control-Allow-Headers' "Authorization";
               add_header 'Access-Control-Allow-Credentials' "true";
