--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -41,6 +41,7 @@ server {
                 # proxy_cache            cachehtml;
                 # proxy_cache_valid      200  1d;
                 proxy_ssl_session_reuse off;
+                proxy_set_header X-Scheme $scheme;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header   Host $http_host;
@@ -62,6 +63,10 @@ server {
                 # expires max;
                 expires 30d;
                 # expires -1;
+                proxy_ssl_session_reuse off;
+                proxy_set_header X-Scheme $scheme;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header   Cookie $http_cookie;
                 proxy_set_header   Referer $http_referer;
                 proxy_set_header   Host $http_host;
