Adding css as static file redirection

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -56,7 +56,7 @@ server {
                 send_timeout                300;
         }
         # Static files are cashed for 30 days
-        location ~* \.(|jpg|jpeg|gif|png|ico|zip|gz|xls|bmp|rtf|js)$ {
+        location ~* \.(|jpg|jpeg|gif|png|ico|zip|gz|xls|bmp|rtf|js|css)$ {
                 # proxy_set_header Host $host;
                 #proxy_cache cacheimage;
                 proxy_cache_valid 30d;
