updating erpstock config

--- a/cookbooks/configs/templates/default/erpstock.conf
+++ b/cookbooks/configs/templates/default/erpstock.conf
@@ -5,7 +5,7 @@
     "enable_log": 1
   },
   "redis": {
-    "host": "erpstockredis",
+    "host": "zkf_erpstockredis",
     "port": "6379"
   },
   "stock_mysql": {
