--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -21,7 +21,7 @@ server {
         <% if @proxyport.eql?("443") || @proxyport.eql?("5984") %>
         <%= "## For SSL." %>
         <%= "listen 443 ssl;" %>
-        <%= "ssl    on;" %>
+        <%= "ssl    off;" %>
         <%= "ssl_certificate    /root/" %><%= @domain %><%= "/cert1.pem;" %>
         <%= "ssl_certificate_key    /root/" %><%= @domain %><%= "/privkey1.pem;" %>
         <%= "ssl_session_timeout 5m;" %>
