Fixing syntax error

--- a/cookbooks/webserver/templates/default/proxy.conf
+++ b/cookbooks/webserver/templates/default/proxy.conf
@@ -26,7 +26,7 @@ server {
         <%= "ssl_certificate_key    /root/" %><%= @domain %><%= "/privkey1.pem;" %>
         <%= "ssl_session_timeout 5m;" %>
         <%= "## END SSL ##" %>
-        <%= end %>
+        <% end %>
         <% if ! @proxyport.eql?("80")%><%= "listen "%><%= @proxyport%><%= ";"%><% end %>
 
         server_name <%= @domain %>;
