Writing log when cloning repo

--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -557,7 +557,7 @@
                       {
                         "Ref": "BootCloudBranch"
                       },
-                      " https://keithyau:thomas123@bitbucket.org/bootdevsys/bootcloud.git /home/ec2-user/chef11/chef-repo; [ $? -eq 0 ] && break;n=$[$n+1];sleep 15;done;"
+                      " https://keithyau:thomas123@bitbucket.org/bootdevsys/bootcloud.git /home/ec2-user/chef11/chef-repo >> /var/log/cfn-init.log; [ $? -eq 0 ] && break;n=$[$n+1];sleep 15;done;"
                     ]
                   ]
                 },
