--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -682,7 +682,8 @@
                           "/root/create_emr.sh ",
                           {
                             "Ref": "clustername"
-                          }
+                          },
+                          ">> /var/log/cfn-init.log"
                         ]
                       ]
                     },
